Mon Sep 13 16:23:27 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: MultiTkIp.new_master and new_slave accept
	  safe-level value argument

Mon Sep 13 10:48:37 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_getpid): don't need to use _getpid() on
	  mswin32 and mingw32.

Mon Sep 13 10:22:05 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* object.c (nil_inspect): fix typo.

Mon Sep 13 09:29:58 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper/depend: (nmake hack) prepend "./" to ripper.c to
	  avoid {$(srcdir)}.

Mon Sep 13 06:43:42 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper/tools/list-parse-event-ids.rb: does not use getopts.

	* ext/ripper/tools/list-scan-event-ids.rb: ditto.

Mon Sep 13 02:42:28 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/Setup: add ripper.

	* ext/Setup.atheos: ditto.

	* ext/Setup.dj: ditto.

	* ext/Setup.emx: ditto.

	* ext/Setup.nt: ditto.

	* ext/Setup.x68: ditto.

Mon Sep 13 02:26:31 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper: ripper extention added.

	* ext/ripper/MANIFEST: new file.

	* ext/ripper/README: new file.

	* ext/ripper/depend: new file.

	* ext/ripper/extconf.rb: new file.

	* ext/ripper/eventids2.c: new file.

	* ext/ripper/ripper.rb.in: new file.

	* ext/ripper/lib/ripper.rb: new file.

	* ext/ripper/test/check-event-arity.rb: new file.

	* ext/ripper/test/check-event-coverage.sh: new file.

	* ext/ripper/test/check-scanner-event-coverage.rb: new file.

	* ext/ripper/test/list-called-events.rb: new file.

	* ext/ripper/test/src_rb: new file.

	* ext/ripper/test/validate.rb: new file.

	* ext/ripper/tools/generate-eventids1.rb: new file.

	* ext/ripper/tools/generate-param-macros.rb: new file.

	* ext/ripper/tools/generate-ripper_rb.rb: new file.

	* ext/ripper/tools/list-parse-event-ids.rb: new file.

	* ext/ripper/tools/list-scan-event-ids.rb: new file.

	* ext/ripper/tools/preproc.rb: new file.

	* ext/ripper/tools/strip.rb: new file.
