@@ -7739,28 +7739,6 @@ blk_free(data)
 }
 
 static void
-blk_copy_prev(block)
-    struct BLOCK *block;
-{
-    struct BLOCK *tmp;
-    struct RVarmap* vars;
-
-    while (block->prev) {
-	tmp = ALLOC_N(struct BLOCK, 1);
-	MEMCPY(tmp, block->prev, struct BLOCK, 1);
-	scope_dup(tmp->scope);
-
-	for (vars = tmp->dyna_vars; vars; vars = vars->next) {
-	    if (FL_TEST(vars, DVAR_DONT_RECYCLE)) break;
-	    FL_SET(vars, DVAR_DONT_RECYCLE);
-	}
-
-	block->prev = tmp;
-	block = tmp;
-    }
-}
-
-static void
 frame_dup(frame)
     struct FRAME *frame;
 {
@@ -7774,6 +7752,29 @@ frame_dup(frame)
 	*tmp = *frame->prev;
 	frame->prev = tmp;
 	frame = tmp;
+    }
+}
+
+static void
+blk_copy_prev(block)
+    struct BLOCK *block;
+{
+    struct BLOCK *tmp;
+    struct RVarmap* vars;
+
+    while (block->prev) {
+	tmp = ALLOC_N(struct BLOCK, 1);
+	MEMCPY(tmp, block->prev, struct BLOCK, 1);
+	scope_dup(tmp->scope);
+	frame_dup(&tmp->frame);
+
+	for (vars = tmp->dyna_vars; vars; vars = vars->next) {
+	    if (FL_TEST(vars, DVAR_DONT_RECYCLE)) break;
+	    FL_SET(vars, DVAR_DONT_RECYCLE);
+	}
+
+	block->prev = tmp;
+	block = tmp;
     }
 }
 
